--- a/src/pages/discover/discover.scss
+++ b/src/pages/discover/discover.scss
@@ -1,3 +1,12 @@
 page-discover {
-
+    .poster {
+        width: 100%;
+        height: 250px;
+        border-radius: 6px;
+        img.poster {
+            width: 100%;
+            height: 240px;
+            object-fit: cover;
+        }
+    }
 }
