--- a/src/pages/details/details.scss
+++ b/src/pages/details/details.scss
@@ -1,12 +1,117 @@
 page-details {
+  .backdrop {
+    position: relative;
+    height: 270px;
+    overflow: hidden;
+    background: #ddd;
+    img {
+      opacity: 1;
+      width: 100%;
+      height: 270px;
+      object-fit: cover;
+      transform: scale(1.5);
+      position: absolute;
+    }
+  }
 
-    .button {
-        float: left;
-        width: 50%;
+  .poster-shadow {
+    width: 170px;
+    height: 230px;
+    border-radius: 6px;
+    box-shadow: 0 5px rgba(0, 0, 0, 0.7);
+    margin-top: -225px;
+    transform: scale(0.9);
+    filter: blur(7px);
+  }
+  
+  div.poster {
+    position: absolute;
+    z-index: 99999;
+    margin-top: -210px;
+    left: 0px;
+    margin-left: calc(50% - (170px / 2));
+    width: 170px;
+    height: 230px;
+    background: #eee;
+    border-radius: 6px;
+    img.poster {
+      width: 100%;
+      z-index: 9999;
+      height: 230px;
+      object-fit: cover;
+      border-radius: 6px;
+      position: relative;
+      border: 3px solid rgba(255, 255, 255, 1);
+    }
+  }
+  .show-data {
+    margin-top: 30px;
+    .name {
+      font-weight: 800;
+      letter-spacing: -0.03em;
+      font-size: 32px;
+      line-height: 20px;
+      padding: 0 0 20px 0;
+    }
+    .year {
+      width: 100px;
+      color: #aaa;
+      font-size: 20px;
+      float: left;
+    }
+    .vote {
+      float: right;
+      text-align: right;
+      .text {
+        float: right;
+        color: #aaa;
+        font-size: 13px;
+        b {
+          font-weight: 600;
+          font-size: 16px;
+          color: #222;
+        }
       }
-
-      img {
-        width: 100%;
+      .stars {
+        float: right;
+        font-size: 20px;
+        margin-right: 10px;
+        ion-icon {
+          color: #fbcd00;
+          line-height: 0px;
+        }
       }
-
+      .count {
+        clear: both;
+        color: #ccc;
+      }
+    }
+    .overview {
+      margin-top: 50px;
+      font-size: 18px;
+      line-height: 21px;
+      padding: 15px 0 15px 0;
+      color: #444;
+      font-weight: 250;
+    }
+    .duration, .genres {
+      font-size: 16px;
+      line-height: 18px;
+      padding: 15px 0 5px 0;
+      .label {
+        color: #222;
+        padding: 4px 0 4px 24px;
+        font-weight: 100;
+        ion-icon {
+          position: absolute;
+          margin-top: 1px;
+          margin-left: -24px;
+        }
+      }
+      .value {
+        color: #444;
+        font-weight: 400;
+      }
+    }
+  }
 }
