--- a/src/pages/my-vault/my-vault.scss
+++ b/src/pages/my-vault/my-vault.scss
@@ -11,20 +11,27 @@ page-my-vault {
         .overlay {
             position: absolute;
             bottom: 5px;
-            left: 2.5%;
-            background-color: rgba(255,255,255,0.8);
+            background-color: rgba(255,255,255,0.9);
             overflow: hidden;
-            width: 95%;
+            width: 170px;
             height: 260px;
             z-index: 100;
+            
         }
         .invisible-overlay {
             position: absolute;
             background-color: rgba(255,255,255,0);
             overflow: hidden;
-            width: 100%;
-            height: 100%;
             z-index: 99;
+        }
+        ion-icon {
+            width: 100%;
+            text-align: center;
+            color: rgba(120,120,120,0.9);
+            font-size: 4.5rem;
+            position: relative;
+            margin-top: 30%;
+            cursor:pointer;
         }
     }
 
