--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -34,9 +34,9 @@ $app-direction: ltr;
 // The "primary" color is the only required color in the map.
 
 $colors: (
-  primary:    #488aff,
-  secondary:  #32db64,
-  danger:     #f53d3d,
+  primary:    #408abf,
+  secondary:  #639f9c,
+  danger:     #ba333b,
   light:      #f4f4f4,
   dark:       #222
 );
