--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -21,14 +21,16 @@ ion-icon {
         mask-position: 50% 50%;
         mask-repeat: no-repeat;
         background: currentColor;
-        width: 1.2em;
-        height: 1.2em;
+        min-width: 40px;
     }
 // custom icons
     &[class*="prefix-discover"] {
-        mask-image: url(../assets/icon/discover.svg);
+        mask-image: url(../assets/icon/navi.svg);
     }
     &[class*="prefix-vault"] {
         mask-image: url(../assets/icon/vault.svg);
+    }
+    &[class*="prefix-search"] {
+        mask-image: url(../assets/icon/search.svg);
     }
 }
