--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -6,8 +6,8 @@ ion-icon {
         mask-position: 50% 50%;
         mask-repeat: no-repeat;
         background: currentColor;
-        width: 1em;
-        height: 1em;
+        width: 0.91em;
+        height: 0.91em;
     }
     // custom icons
     &[class*="custom-icon1"] {
@@ -19,4 +19,20 @@ ion-icon {
     &[class*="custom-icon3"] {
         mask-image: url(../assets/icon/search.svg);
     }
+    &[class*="custom-icon4"] {
+        mask-image: url(../assets/icon/watched.svg);
+    }
+}
+
+
+.toolbar {
+    height: 60px;
+  }
+
+  .toolbar-background {
+    background-color: rgb(255, 255, 255);
+  }
+
+  .bg-style {
+    background: rgb(243, 242, 241);
 }
