--- a/src/pages/my-vault/my-vault.scss
+++ b/src/pages/my-vault/my-vault.scss
@@ -1,20 +1,20 @@
-page-my-vault {
+page-my-vault {    
     .poster {
         width: 100%;
         height: 270px;
-        border-radius: 6px;
 
         img.poster {
             width: 100%;
             height: 260px;
             object-fit: cover;
         }
+
         .overlay {
             position: absolute;
             bottom: 5px;
             background-color: rgba(255,255,255,0.9);
             overflow: hidden;
-            width: 170px;
+            width: 100%;
             height: 260px;
             z-index: 99;
             .icons {
@@ -54,8 +54,13 @@ page-my-vault {
     }
 
     ion-segment {
-        height: 10%;
-
+        height: auto;
+        padding-top: 50px;
+        background: rgb(255, 255, 255);
         // border-radius: 0px !important;
+    }
+
+    .bg-color {
+        background: rgb(243, 242, 241);
     }
 }
