--- a/src/pages/tabs/tabs.scss
+++ b/src/pages/tabs/tabs.scss
@@ -1,3 +1,8 @@
-page-tabs {
-    
-}
+.ios, .md, .wp {
+    page-tabs {
+      .tabs .tabbar {
+        background: rgb(255, 255, 255);
+        height: 60px;
+      }
+    }
+  }
