--- a/src/pages/search/search.scss
+++ b/src/pages/search/search.scss
@@ -8,5 +8,20 @@ page-search {
             height: 260px;
             object-fit: cover;
         }
+        .icons {
+            position: absolute;
+            border-radius: 5px;
+            bottom: 1px;
+            left: calc(50% - (40px / 2));
+            background-color: white;
+            width: 40px;
+            height: 25px;
+            text-align: center;
+            font-size: 18px;
+            font-weight: bold;
+          }
+          ion-icon {
+            cursor:pointer;
+          }
     }
 }
