--- a/src/pages/episode-details/episode-details.scss
+++ b/src/pages/episode-details/episode-details.scss
@@ -1,5 +1,19 @@
 page-episode-details {
-    ion-content{
-        font-family: 'Blinker', sans-serif;
-    }
+   
+
+    .backdrop {
+        position: relative;
+        height: 200px;
+        overflow: hidden;
+        background: #ddd;
+        img {
+          opacity: 1;
+          width: 100%;
+          height: 200px;
+          object-fit: cover;
+          position: absolute;
+        }
+      }
+
+    
 }
