--- a/src/pages/my-vault/my-vault.scss
+++ b/src/pages/my-vault/my-vault.scss
@@ -1,4 +1,6 @@
-page-my-vault {    
+page-my-vault {  
+
+
     .poster {
         width: 100%;
         height: 270px;
@@ -46,6 +48,7 @@ page-my-vault {
         border-left-width: 0px !important;
         border-right-width: 0px !important;
         border-bottom-width: 0px !important;
+        font-size: 0.8em !important;
 
         &.segment-activated {
             border-color: color($colors, primary) !important;
@@ -55,12 +58,11 @@ page-my-vault {
 
     ion-segment {
         height: auto;
-        padding-top: 50px;
         background: rgb(255, 255, 255);
-        // border-radius: 0px !important;
+        -webkit-box-shadow: 0px 4px 5px 0px rgba(153,151,153,0.3);
+        -moz-box-shadow: 0px 4px 5px 0px rgba(153,151,153,0.3);
+        box-shadow: 0px 4px 5px 0px rgba(153,151,153,0.3);
     }
 
-    .bg-color {
-        background: rgb(243, 242, 241);
-    }
+   
 }
