--- a/src/pages/tabs/tabs.scss
+++ b/src/pages/tabs/tabs.scss
@@ -3,6 +3,9 @@
       .tabs .tabbar {
         background: rgb(255, 255, 255);
         height: 60px;
+        -webkit-box-shadow: 0px -4px 5px 0px rgba(153,151,153,0.2);
+        -moz-box-shadow: 0px -4px 5px 0px rgba(153,151,153,0.2);
+        box-shadow: 0px -4px 5px 0px rgba(153,151,153,0.2);
       }
     }
   }
