Add settings page

--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -35,7 +35,7 @@ $app-direction: ltr;
 
 $colors: (
   primary:    #408abf,
-  secondary:  #639f9c,
+  secondary:  #72d9bc,
   danger:     #ba333b,
   light:      #f4f4f4,
   dark:       #222,
