--- a/src/pages/episode-list/episode-list.scss
+++ b/src/pages/episode-list/episode-list.scss
@@ -1,3 +1,10 @@
 page-episode-list {
 
+    .season {
+        font-family: Avenir-Black;
+    }
+    .episode {
+        font-family: Avenir;
+    }
+
 }
