--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -38,7 +38,8 @@ $colors: (
   secondary:  #639f9c,
   danger:     #ba333b,
   light:      #f4f4f4,
-  dark:       #222
+  dark:       #222,
+  active:     #C2C2C2
 );
 
 
