Fix styling for overlay and fix buttons being triggered on long press

--- a/src/pages/my-vault/my-vault.scss
+++ b/src/pages/my-vault/my-vault.scss
@@ -16,7 +16,7 @@ page-my-vault {
             bottom: 5px;
             background-color: rgba(255,255,255,0.9);
             overflow: hidden;
-            width: 100%;
+            width: 161.5px;
             height: 260px;
             z-index: 99;
             .icons {
