--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -5,15 +5,12 @@
 // roboto, and noto sans fonts
 $font-path: "../assets/fonts";
 
-
 // The app direction is used to include
 // rtl styles in your app. For more info, please see:
 // http://ionicframework.com/docs/theming/rtl-support/
 $app-direction: ltr;
 
-
 @import "ionic.globals";
-
 
 // Shared Variables
 // --------------------------------------------------
@@ -21,9 +18,6 @@ $app-direction: ltr;
 // the Sass variables found in Ionic's source scss files.
 // To view all the possible Ionic variables, see:
 // http://ionicframework.com/docs/theming/overriding-ionic-variables/
-
-
-
 
 // Named Color Variables
 // --------------------------------------------------
@@ -34,35 +28,25 @@ $app-direction: ltr;
 // The "primary" color is the only required color in the map.
 
 $colors: (
-  primary:    #408abf,
-  secondary:  #72d9bc,
-  danger:     #ba333b,
-  light:      #f4f4f4,
-  dark:       #222,
-  active:     #C2C2C2
+  primary: #408abf,
+  secondary: #72d9bc,
+  danger: #ba333b,
+  light: #f4f4f4,
+  dark: #222,
+  active: #c2c2c2
 );
-
 
 // App iOS Variables
 // --------------------------------------------------
 // iOS only Sass variables can go here
 
-
-
-
 // App Material Design Variables
 // --------------------------------------------------
 // Material Design only Sass variables can go here
 
-
-
-
 // App Windows Variables
 // --------------------------------------------------
 // Windows only Sass variables can go here
-
-
-
 
 // App Theme
 // --------------------------------------------------
@@ -73,14 +57,12 @@ $colors: (
 
 @import "ionic.theme.default";
 
-
 // Ionicons
 // --------------------------------------------------
 // The premium icon font for Ionic. For more info, please see:
 // http://ionicframework.com/docs/ionicons/
 
 @import "ionic.ionicons";
-
 
 // Fonts
 // --------------------------------------------------
@@ -95,26 +77,26 @@ $colors: (
 //   font-style: normal;
 // }
 
-
 // @import url('https://fonts.googleapis.com/css?family=Oxygen+Mono&display=swap');
 // $font-family-base: "Oxygen", sans-serif !default;
 
 @font-face {
-font-family: Avenir-Black;
-src: url("../assets/fonts/Avenir/AvenirLTStd-black.otf");
+  font-family: Avenir-Black;
+  src: url("../assets/fonts/Avenir/AvenirLTStd-black.otf");
 }
 
 @font-face {
-  font-family: Avenir;
-  src: url("../assets/fonts/Avenir/AvenirLTStd-regular.otf");
-  }
+  font-family: Avenir-Light;
+  src: url("../assets/fonts/Avenir/AvenirLTStd-light.otf");
+}
 
-
-
+@font-face {
+  font-family: Avenir-Heavy;
+  src: url("../assets/fonts/Avenir/AvenirLTStd-heavy.otf");
+}
 
 $tabs-ios-tab-icon-size: 1.5em;
 $tabs-md-tab-icon-size: 1.5em;
-
 
 $toolbar-md-title-text-color: #404040;
 $toolbar-ios-title-text-color: #404040;
