Style progress bar

--- a/src/pages/episode-details/episode-details.scss
+++ b/src/pages/episode-details/episode-details.scss
@@ -88,41 +88,54 @@ page-episode-details {
     justify-content: space-between;
     text-transform: uppercase;
     font-family: Avenir;
-    
   }
 
+  #progress {
+    width: 10px;
+    border-bottom: 2px solid red;
+  }
 
-    .progress{
-      width: 10px;
-      position: absolute;
-      border-bottom: 1px solid red;
-    }
-
-    #one {
-      width: 10px;
-      border-bottom: 1px solid red;
-    }
-
-    .line{
-      width: 112px;
+  .line {
+    position: absolute;
+    width: 112px;
     height: 5px;
     margin-left: 25px;
     border-bottom: 1px solid grey;
-    }
+  }
 
-
-   
-
-  .season-progress {
+  .progress {
     font-size: 1.5em;
     display: inline-block;
     width: 50%;
   }
-  .episode-progress {
-    font-size: 1.5em;
-    display: inline-block;
-    width: 50%;
+
+  hr {
+    display: block;
+    height: 1px;
+    border: 0;
+    border-top: 1px solid #ccc;
+    margin: 1em 0;
+    padding: 0;
   }
+
+  hr.progress {
+    width: 10px;
+    border-bottom: 2px solid red;
+  }
+
+  .w3-grey,.w3-hover-grey:hover,.w3-gray,.w3-hover-gray:hover{color:#000!important;background-color:#9e9e9e!important}
+.w3-light-grey,.w3-hover-light-grey:hover,.w3-light-gray,.w3-hover-light-gray:hover{
+  color:#000!important;
+  background-color:#f1f1f1!important;
+  margin: 0 !important;
+  width: 100px;
+}
+
+.progress-bar {
+  align-content: center;
+  margin: auto;
+  width: 100px;
+}
 
 
 }
