Styled log in screen

--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -101,3 +101,8 @@ $tabs-md-tab-icon-size: 1.5em;
 $toolbar-md-title-text-color: #404040;
 $toolbar-ios-title-text-color: #404040;
 $toolbar-wp-title-text-color: #404040;
+
+
+$text-input-md-highlight-color: #51cfb1;
+$text-input-highlight-color-valid: #DBDBDB;
+$text-input-highlight-color-invalid:#DBDBDB;
