--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -11,7 +11,7 @@ ion-icon {
   }
   // custom icons
   &[class*="custom-icon1"] {
-    mask-image: url(../assets/icon/vault.svg);
+    mask-image: url(../assets/icon/logo.svg);
   }
   &[class*="custom-icon2"] {
     mask-image: url(../assets/icon/discover.svg);
@@ -24,6 +24,20 @@ ion-icon {
   }
   &[class*="custom-icon5"] {
     mask-image: url(../assets/icon/settings.svg);
+  }
+
+  &[class*="icon6"] {
+    mask-size: contain;
+    mask-position: 50% 50%;
+    mask-repeat: no-repeat;
+    background: linear-gradient(
+            to bottom right,
+            color($colors, primary),
+            color($colors, secondary)
+        );
+    mask-image: url(../assets/icon/logo.svg);
+    width: 8em;
+    height: 8em;
   }
 }
 
@@ -55,7 +69,6 @@ ion-segment {
     font-family: "Avenir-Black" !important;
     text-transform: uppercase;
     letter-spacing: 1.5px;
-    
 }
 
 .header {
