--- a/src/pages/login/login.scss
+++ b/src/pages/login/login.scss
@@ -35,7 +35,7 @@ page-login {
     .login-button {
       font-family: Avenir-Black;
       font-size: 1.3em;
-      background: #51cfb1;
+      background: #51cfb1 !important;
       border-radius: 30px !important;
       width: 5em;
       -webkit-box-shadow: 2px 2px 5px 0px rgba(189, 189, 189, 1);
@@ -44,6 +44,7 @@ page-login {
       margin-top: 20px;
       padding: 20px 24px;
       width: 80%;
+      height: 5%;
     }
   }
   p {
@@ -53,11 +54,11 @@ page-login {
       background-color: #fff !important;
       border: none;
       color: #51cfb1;
-      padding: 0 !important;
       text-align: center;
       text-decoration: none;
       display: inline-block;
-      font-size: 16px;
+      font-size: 1em;
+      padding: none
     }
   }
 
@@ -68,4 +69,10 @@ page-login {
     margin-left: auto;
     margin-right: auto;
   }
+
+
+
+
+
+  
 }
