Styling on change pw page

--- a/src/pages/change-password/change-password.scss
+++ b/src/pages/change-password/change-password.scss
@@ -1,8 +1,6 @@
 page-change-password {
     .input-field {
-        padding-left: 10%;
-        padding-right: 10%;
-        padding-bottom: 5%;
+        font-family: Avenir;
     }
 
     .container {
@@ -10,24 +8,35 @@ page-change-password {
         flex-direction: column;
         justify-content: center;
         height:100%;
+        padding: 10%;
     }
 
-    .button {
-        background: linear-gradient(
-            to bottom right,
-            color($colors, primary),
-            color($colors, secondary)
-        );
-        width: auto;
-        padding: 5%;
-        margin: 6%;
-        margin-left: 10%;
+    .change-pw-button {
+        font-family: Avenir-Black;
+        font-size: 1.3em;
+        background: color($colors, secondary) !important;
+        -webkit-box-shadow: 2px 2px 5px 0px rgba(189, 189, 189, 1);
+        -moz-box-shadow: 2px 2px 5px 0px rgba(189, 189, 189, 1);
+        box-shadow: 2px 2px 5px 0px rgba(189, 189, 189, 1);
+        padding: 10%;
+        width: 80%;
+        margin: 10%;
+    }
+
+    .change-pw-button:hover .change-pw-button:active{
+        background: color($colors, button-press) !important;
     }
 
     .error {
-        padding-left: 10%;
+        color: color($colors, error) !important;
         width: 80%;
-        font-size: 15px;
-        color: color($colors, danger);
+        text-align: center;
+        margin-left: auto;
+        margin-right: auto;
+    }    
+
+    p {
+        font-family: Avenir-Heavy;
+        color: #4f4f4f !important;
     }
 }
