--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -29,8 +29,10 @@ $app-direction: ltr;
 
 $colors: (
   primary: #408abf,
-  secondary: #72d9bc,
+  secondary: #51cfb1,
   danger: #ba333b,
+  error: #ff5252,
+  button-press: #419c87,
   light: #f4f4f4,
   dark: #222,
   active: #c2c2c2,
