--- a/src/pages/discover/discover.scss
+++ b/src/pages/discover/discover.scss
@@ -1,4 +1,8 @@
 page-discover {
+  ion-select {
+    font-family: "Avenir-Black" !important;
+    letter-spacing: 1.5px !important;
+  }
   .poster {
     width: 100%;
     height: 270px;
@@ -21,9 +25,9 @@ page-discover {
       font-weight: bold;
     }
     ion-icon {
-      cursor:pointer;
+      cursor: pointer;
     }
-  } 
+  }
 
   .filter {
     width: 100%;
@@ -43,6 +47,7 @@ page-discover {
   }
 
   .options-overlay {
+    font-family: Avenir-Heavy;
     position: fixed;
     width: 100%;
     height: calc(100% - 132px);
@@ -61,11 +66,13 @@ page-discover {
     }
 
     ion-item {
-      background-color: rgba(255,255,255,0.98) !important;
+      background-color: rgba(255, 255, 255, 0.98) !important;
+      color: color($colors, text);
+      font-family: Avenir-Heavy;
     }
 
     ion-item:hover {
-      background-color: rgba(230,230,230,0.99) !important;
+      background-color: rgba(230, 230, 230, 0.99) !important;
     }
   }
 
