--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -33,7 +33,8 @@ $colors: (
   danger: #ba333b,
   light: #f4f4f4,
   dark: #222,
-  active: #c2c2c2
+  active: #c2c2c2,
+  text: #4F4F4F
 );
 
 // App iOS Variables
@@ -106,3 +107,4 @@ $toolbar-wp-title-text-color: #404040;
 $text-input-md-highlight-color: #51cfb1;
 $text-input-highlight-color-valid: #DBDBDB;
 $text-input-highlight-color-invalid:#DBDBDB;
+
