--- a/src/pages/my-vault/my-vault.scss
+++ b/src/pages/my-vault/my-vault.scss
@@ -7,9 +7,11 @@ page-my-vault {
             width: 100%;
             height: 260px;
             object-fit: cover;
+            border-radius: 3px;
         }
 
         .overlay {
+            border-radius: 3px;
             position: absolute;
             bottom: 5px;
             background-color: rgba(255,255,255,0.9);
