--- a/src/pages/change-password/change-password.scss
+++ b/src/pages/change-password/change-password.scss
@@ -23,7 +23,7 @@ page-change-password {
         margin: 10%;
     }
 
-    .change-pw-button:hover .change-pw-button:active{
+    .change-pw-button:active{
         background: color($colors, button-press) !important;
     }
 
