--- a/src/pages/discover/discover.scss
+++ b/src/pages/discover/discover.scss
@@ -31,9 +31,11 @@ page-discover {
 
   .filter {
     width: 100%;
-    height: 25px;
-    min-height: 10px;
-    padding: 0 7%;
+    height: 35px;
+    min-height: 35px;
+    padding: 10px 30px;
+    font-size: 1.2rem;
+    font-weight: bold;
 
     ion-select {
       color: color($colors, primary);
@@ -41,7 +43,7 @@ page-discover {
       overflow: visible;
     }
     .filter-button {
-      font-size: 25px;
+      font-size: 30px !important;
       color: color($colors, primary);
     }
   }
@@ -53,7 +55,7 @@ page-discover {
     height: calc(100% - 132px);
     background: rgba(0, 0, 0, 0.7);
     z-index: 999;
-    top: 83px;
+    top: 92px;
     left: 0;
 
     .scroll-y {
@@ -99,7 +101,7 @@ page-discover {
   }
 
   .scroll-content {
-    margin-top: 65px !important;
+    margin-top: 80px !important;
     border-top: none !important;
   }
 
