--- a/src/pages/login/login.scss
+++ b/src/pages/login/login.scss
@@ -33,7 +33,7 @@ page-login {
     .login-button {
       font-family: Avenir-Black;
       font-size: 1.3em;
-      background: #51cfb1 !important;
+      background: color($colors, secondary) !important;
       border-radius: 30px !important;
       width: 5em;
       -webkit-box-shadow: 2px 2px 5px 0px rgba(189, 189, 189, 1);
@@ -45,13 +45,18 @@ page-login {
       height: 5%;
     }
   }
+
+  .login-button:hover .login-button:active{
+    background: color($colors, button-press) !important;
+  }
+
   p {
     font-family: Avenir-Heavy;
     color: #4f4f4f !important;
     button {
       background-color: #fff !important;
       border: none;
-      color: #51cfb1;
+      color: color($colors, secondary);
       text-align: center;
       text-decoration: none;
       display: inline-block;
@@ -61,16 +66,11 @@ page-login {
   }
 
   .error {
-    color: #ff5252 !important;
+    color: color($colors, error) !important;
     width: 80%;
     text-align: center;
     margin-left: auto;
     margin-right: auto;
   }
-
-
-
-
-
   
 }
