--- a/src/pages/settings/settings.scss
+++ b/src/pages/settings/settings.scss
@@ -1,33 +1,36 @@
 page-settings {
-    .underline {
-        width: 100%;
-        height: 100%;
-        padding: 8px;
-        border-bottom: 3px solid color($colors, primary); /* This creates the border. Replace black with whatever color you want. */
-    }
     .content {
         text-align: center;
-        margin-top: 5%;
     }
-    .gradient-button {
-        background: linear-gradient(
-            to bottom right,
-            color($colors, primary),
-            color($colors, secondary)
-        );
-        width: 80%;
+    .green-button {
+        font-family: Avenir-Black;
+        font-size: 1.3em;
+        background: color($colors, secondary) !important;
+        -webkit-box-shadow: 2px 2px 5px 0px rgba(189, 189, 189, 1);
+        -moz-box-shadow: 2px 2px 5px 0px rgba(189, 189, 189, 1);
+        box-shadow: 2px 2px 5px 0px rgba(189, 189, 189, 1);
         padding: 8%;
+        width: 80%;
         margin: 6%;
+    }
+
+    .green-button:active {
+        background: color($colors, button-press) !important;
     }
     
-    .gradient-button-red {
-        background: linear-gradient(
-            to bottom right,
-            color($colors, danger),
-            #ff5e44
-        );
-        width: 80%;
+    .red-button {
+        font-family: Avenir-Black;
+        font-size: 1.3em;
+        background: color($colors, error) !important;
+        -webkit-box-shadow: 2px 2px 5px 0px rgba(189, 189, 189, 1);
+        -moz-box-shadow: 2px 2px 5px 0px rgba(189, 189, 189, 1);
+        box-shadow: 2px 2px 5px 0px rgba(189, 189, 189, 1);
         padding: 8%;
+        width: 80%;
         margin: 6%;
-      }
+    }
+
+    .red-button:active {
+        background: color($colors, danger) !important;
+    }
 }
