--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -28,7 +28,7 @@ $app-direction: ltr;
 // The "primary" color is the only required color in the map.
 
 $colors: (
-  primary: #408abf,
+  primary: #49b4b4,
   secondary: #51cfb1,
   danger: #ba333b,
   error: #ff5252,
