Move logo down in login/sign up screen

--- a/src/pages/login/login.scss
+++ b/src/pages/login/login.scss
@@ -1,12 +1,12 @@
 page-login {
   .login-content {
     .logo-row {
-      padding-top: 50px;
-      padding-bottom: 20px;
+        margin-top: 90px !important;
+        padding: 0 !important;
     }
 
     .login-box {
-      padding: 20px 20px 0px 20px;
+      padding: 0px 20px 0px 20px;
       margin-top: 30px;
     }
 
