--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -105,6 +105,6 @@ $toolbar-wp-title-text-color: #404040;
 
 
 $text-input-md-highlight-color: #51cfb1;
-$text-input-highlight-color-valid: #DBDBDB;
-$text-input-highlight-color-invalid:#DBDBDB;
+$text-input-highlight-color-valid: #DBDBDB !important;
+$text-input-highlight-color-invalid:#DBDBDB !important;
 
