--- a/src/pages/signup/signup.scss
+++ b/src/pages/signup/signup.scss
@@ -1,12 +1,12 @@
 page-signup {
   .signup-content {
     .logo-row {
-      padding-top: 50px;
-      padding-bottom: 20px;
+        margin-top: 90px !important;
+        padding: 0 !important;
     }
 
     .signup-box {
-      padding: 20px 20px 0px 20px;
+      padding: 0px 20px 0px 20px;
       margin-top: 30px;
     }
 
