More styling on discover to match theme

--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -98,3 +98,8 @@ ion-segment {
     border-bottom: 2px solid color($colors, primary);
   }
 }
+
+.refresher-refreshing .spinner-crescent circle, .refresher-refreshing .spinner-ios line, .refresher-refreshing .spinner-ios-small line{
+  stroke : color($colors, "text");
+}
+
