--- a/src/pages/discover/discover.scss
+++ b/src/pages/discover/discover.scss
@@ -1,7 +1,17 @@
 page-discover {
+  ion-header {
+    -webkit-box-shadow: 0px 4px 5px 0px rgba(153,151,153,0.3);
+    -moz-box-shadow: 0px 4px 5px 0px rgba(153,151,153,0.3);
+    box-shadow: 0px 4px 5px 0px rgba(153,151,153,0.3);
+  }
   ion-select {
     font-family: "Avenir-Black" !important;
     letter-spacing: 1.5px !important;
+    font-size: 0.9em;
+  }
+
+  ion-item {
+    height: 50px !important;
   }
   .poster {
     width: 100%;
@@ -62,6 +72,10 @@ page-discover {
       height: calc(100% - 10px) !important;
     }
 
+    .gestures {
+      padding-top: 10px;
+    }
+
     .scroll-content {
       padding: 0 !important;
       margin-top: 0px !important;
@@ -101,7 +115,7 @@ page-discover {
   }
 
   .scroll-content {
-    margin-top: 80px !important;
+    margin-top: 94px !important;
     border-top: none !important;
   }
 
