Add plugin for external url, and fix css for smaller phones

--- a/src/pages/change-password/change-password.scss
+++ b/src/pages/change-password/change-password.scss
@@ -1,6 +1,11 @@
 page-change-password {
+    .toolbar-title {
+        font-size: 1.5rem !important;
+    }
+
     .input-field {
         font-family: Avenir;
+        color: color($colors, text);
     }
 
     .container {
@@ -13,7 +18,6 @@ page-change-password {
 
     .change-pw-button {
         font-family: Avenir-Black;
-        font-size: 1.3em;
         background: color($colors, secondary) !important;
         -webkit-box-shadow: 2px 2px 5px 0px rgba(189, 189, 189, 1);
         -moz-box-shadow: 2px 2px 5px 0px rgba(189, 189, 189, 1);
