--- a/src/pages/login/login.scss
+++ b/src/pages/login/login.scss
@@ -1,8 +1,8 @@
 page-login {
   .login-content {
     .logo-row {
-        margin-top: 90px !important;
-        padding: 0 !important;
+      margin-top: 12% !important;
+      padding: 0 !important;
     }
 
     .login-box {
@@ -46,7 +46,7 @@ page-login {
     }
   }
 
-  .login-button:hover .login-button:active{
+  .login-button:active {
     background: color($colors, button-press) !important;
   }
 
