Final fix of styling issues

--- a/src/pages/my-vault/my-vault.scss
+++ b/src/pages/my-vault/my-vault.scss
@@ -71,4 +71,8 @@ page-my-vault {
         -moz-box-shadow: 0px 4px 5px 0px rgba(153,151,153,0.3);
         box-shadow: 0px 4px 5px 0px rgba(153,151,153,0.3);
     }
+
+    .scroll-content {
+        padding-bottom: 0px !important;
+    }
 }
