Add shadows in headers

--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -102,7 +102,9 @@ ion-segment {
   }
 }
 
-.refresher-refreshing .spinner-crescent circle, .refresher-refreshing .spinner-ios line, .refresher-refreshing .spinner-ios-small line{
+.refresher-refreshing .spinner-crescent circle, 
+.refresher-refreshing .spinner-ios line, 
+.refresher-refreshing .spinner-ios-small line{
   stroke : color($colors, "text");
 }
 
