--- a/src/pages/details/details.scss
+++ b/src/pages/details/details.scss
@@ -1,4 +1,9 @@
 page-details {
+  ion-header {
+    -webkit-box-shadow: 0px 4px 5px 0px rgba(153, 151, 153, 0.3);
+    -moz-box-shadow: 0px 4px 5px 0px rgba(153, 151, 153, 0.3);
+    box-shadow: 0px 4px 5px 0px rgba(153, 151, 153, 0.3);
+  }
   .backdrop {
     position: relative;
     height: 270px;
@@ -126,7 +131,7 @@ page-details {
       color: #4F4F4F !important;
       .label {
         color: #4F4F4F !important;
-        padding: 4px 0 4px 24px;
+        padding: 4px 0 10px 24px;
         font-weight: 100;
         ion-icon {
           position: absolute;
