--- a/src/pages/episode-details/episode-details.scss
+++ b/src/pages/episode-details/episode-details.scss
@@ -1,4 +1,9 @@
 page-episode-details {
+  ion-header {
+    -webkit-box-shadow: 0px 4px 5px 0px rgba(153, 151, 153, 0.3);
+    -moz-box-shadow: 0px 4px 5px 0px rgba(153, 151, 153, 0.3);
+    box-shadow: 0px 4px 5px 0px rgba(153, 151, 153, 0.3);
+  }
   .backdrop {
     position: relative;
     height: 200px;
@@ -124,21 +129,19 @@ page-episode-details {
   }
 
   .grey {
-    background-color:#9e9e9e!important;
+    background-color: #9e9e9e !important;
     height: 4px;
   }
 
   .light-grey {
-  background-color:#f1f1f1!important;
-  margin: 0 !important;
-  width: 100px;
-}
+    background-color: #f1f1f1 !important;
+    margin: 0 !important;
+    width: 100px;
+  }
 
-.progress-bar {
-  align-content: center;
-  margin: auto;
-  width: 100px;
-}
-
-
+  .progress-bar {
+    align-content: center;
+    margin: auto;
+    width: 100px;
+  }
 }
