--- a/src/pages/episode-list/episode-list.scss
+++ b/src/pages/episode-list/episode-list.scss
@@ -1,10 +1,13 @@
 page-episode-list {
-
-    .season {
-        font-family: Avenir-Black;
-    }
-    .episode {
-        font-family: Avenir;
-    }
-
+  ion-header {
+    -webkit-box-shadow: 0px 4px 5px 0px rgba(153, 151, 153, 0.3);
+    -moz-box-shadow: 0px 4px 5px 0px rgba(153, 151, 153, 0.3);
+    box-shadow: 0px 4px 5px 0px rgba(153, 151, 153, 0.3);
+  }
+  .season {
+    font-family: Avenir-Black;
+  }
+  .episode {
+    font-family: Avenir;
+  }
 }
